fixed spacing on icons in contact section

--- a/portfolio.css
+++ b/portfolio.css
@@ -341,7 +341,7 @@ section .title::after{
     align-items: center;
 }
 .contact-content .row .info{
-    margin-left: 30px;
+    margin-left: 10px;
 }
 .contact-content .row a{
     font-size: 25px;
